# gooroom-guide

./: Makefile.am  README  configure.ac  meson.build
app-icons/: Makefile.am  meson.build
app-icons/scalable/apps/: Makefile.am
data/: Makefile.am  gooroom-guide.autostart.desktop.in  gooroom-guide.desktop.in  gooroom-guide.desktop.in.in  meson.build
data/etc/: Makefile.am
data/etc/xdg/: Makefile.am
data/etc/xdg/autostart/: Makefile.am
data/guide/: browser.html  common.css  component.html  desktop.html  dockbar.html  end.html  feature.html  intro.html  launcher.html  order  secure-framework.html  software-center.html  toc.json
data/guide/desktop/: browser.html  default_setting1.html  default_setting2.html  default_setting3.html  explore.html  launcher.html  system_setting.html  taskbar.html  update_manager.html
data/guide/en/: basicapps.html  browser.html  common.css  component.html  desktop.html  dockbar.html  end.html  feature.html  finish.html  information.html  intro.html  launcher.html  notification.html  redirect.html  secure-framework.html  security.html  software-center.html  software.html  systemtray.html  window.html
data/guide/intro/: end.html  home.html  menus.html
data/guide/ko/: basicapps.html  browser.html  component.html  desktop.html  dockbar.html  end.html  feature.html  finish.html  information.html  intro.html  launcher.html  notification.html  secure-framework.html  security.html  software-center.html  systemtray.html  window.html
data/guide/secure/: secure_common.css  secure_explain.html  secure_list.html
debian/: README  changelog  control  copyright  gooroom-guide.substvars  rules
po/: .intltool-merge-cache  POTFILES  POTFILES.in  POTFILES.skip  en_GB.gmo  en_GB.po  gooroom-guide.pot  ko.gmo  ko.po  meson.build
src/: Makefile.am  gooroom-guide.desktop.in.in  gtkview.css  guide-application.c  guide-application.h  guide-utils.c  guide-utils.h  guide-window.c  guide-window.h  guide.cpp  guide.gresource.xml  guide.ui  main.c  meson.build  resource.xml  stdafx.h  titlebar.css
src/data/: guide-window.css  guide-window.ui
